--- a/src/App.css
+++ b/src/App.css
@@ -48,5 +48,10 @@ table {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Apple Color Emoji", "SF Pro", "SF Pro Icons", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Dosis', -apple-system, BlinkMacSystemFont, "Apple Color Emoji", "SF Pro", "SF Pro Icons", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.App {
+  background: url("./img/diego-ph-5LOhydOtTKU-unsplash.jpg") center center;
+  width: 100%;
+  height: 5184px;
 }
