--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,19 @@ body {
   width: 100%;
   height: 5184px;
 }
+/* https://stackoverflow.com/a/38270745 */
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+}
+
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
